сделал регистрацию и авторизацию все работает прекрасно

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Samsung normal annual project</string>
+    <string name="JWTToken">JWTToken</string>
+    <string name="JWTTokenSharedPreferencesKey">JWTToken</string>
 </resources>
