сделал регистрацию и авторизацию все работает прекрасно

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Samsung normal annual project</string>
     <string name="JWTToken">JWTToken</string>
+    <string name="genderMan">M</string>
+    <string name="genderWoman">W</string>
     <string name="JWTTokenSharedPreferencesKey">JWTToken</string>
 </resources>
