--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Samsung normal annual project</string>
+    <string name="app_name">FriendsUp</string>
     <string name="JWTToken">JWTToken</string>
     <string name="genderMan">M</string>
     <string name="genderWoman">W</string>
